style.css
body {
  margin: 0;
  background-color: rgb(36, 36, 36);
  font-family: sans-serif;
  overflow: hidden;
}

header {
  position: fixed;
  background-color: aquamarine;
}

.backgroung-img {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 25%;
  object-fit: fill;
  filter: brightness(50%);
  filter: blur(4.5rem);
}

.user-input {
  /* padding: 20px;
  position: fixed;
  top: calc(50vh - 5rem);
  left: 20%;
  right: 20%; */
  width: 100%;
  height: 10rem;
  background-color: rgba(0, 0, 0, 0.367);
  color: white;
  font-size: 15px;
  /* border-radius: 1.5rem; */
  border-radius: 2rem;
  resize: none;
  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
  grid-row: 2;
  display: block;
  box-sizing: border-box;
  padding: 1rem;
}

.input-container {
  display: grid;
  width: 100vw;
  max-width: none;
  margin: 20vh auto;
  gap: 1rem;
  padding: 1rem;
  /* margin-bottom: calc(50vh - 5rem); */
  margin-top: calc(50vh - 10rem);
}

.headline {
  color: rgb(202, 202, 202);
  grid-row: 1;
}

.Logo {
  position: fixed;
  top: 10px;
  left: 10px;
  height: 70px;
  width: auto;
}

.send-button {
  position: relative;
  grid-row: 2;
  grid-column: 2;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin-top: 6rem;
  margin-left: -5rem;
  border: none;
}

